[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abjt-limitter"
version = "0.1.0"
description = "A modern Python library for rate limiting algorithms"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "abjt01" },
]
keywords = [
    "rate-limiting",
    "rate-limiter",
    "token-bucket",
    "leaky-bucket",
    "sliding-window",
    "fixed-window",
    "throttle",
    "throttling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/abjt01/Limitra"
Documentation = "https://github.com/abjt01/Limitra#readme"
Repository = "https://github.com/abjt01/Limitra"
Issues = "https://github.com/abjt01/Limitra/issues"
Changelog = "https://pypi.org/project/abjt-limitter/#history"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
limitra = ["py.typed"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "TCH001", # move import into type-checking block (false positive for runtime use)
    "TCH",    # all type-checking block rules (imports are used at runtime)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
